--- a/APP/TIMER APP/css/style.css
+++ b/APP/TIMER APP/css/style.css
@@ -1,55 +1,61 @@
 body {
-	margin: 0;
+  margin: 0;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 48px;
 }
 
 .timer {
-    position: relative;
-    display: inline-block;
-    width: 100px;
-    height: 100px;
-    margin-left: 270px;
-    margin-top: 50px;
+  position: absolute;
+  width: 6.25em;
+  height: 6.25em;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
 }
 
 .circle {
-    width: 100%;
-    height: 100%;
-    background-image: url(https://cdn-images-1.medium.com/max/2000/1*LZZ9Sr4XL7j2-LjSJ5uq9Q.jpeg);
-    background-size: cover;
-    border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(#2848bc,#ff3c3c);
+  background-size: cover;
+  border-radius: 50%;
 }
 
 .numbers {
-	position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    border-radius: 50%;
-    background: white;
-    width: 50%;
-    height: 50%;
-    text-align: center;
-    line-height: 50px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  border-radius: 50%;
+  background: white;
+  width: 50%;
+  height: 50%;
+  text-align: center;
+  line-height: 3em;
 }
 
 .hours {
-    display: inline-block;
-    position: absolute;
-    left: 0px;
-    width: 20px;
-    text-align: right;
+  display: inline-block;
+  position: absolute;
+  left: 2%;
+  width: 40%;
+  text-align: right;
 }
 
 .minutes {
-    display: inline-block;
-    position: absolute;
-    right: 0px;
-    width: 20px;
-    text-align: left;
+  display: inline-block;
+  position: absolute;
+  right: 2%;
+  width: 40%;
+  text-align: left;
 }
 
 .slash {
-    display: inline-block;
+  display: inline-block;
+  position: relative;
+  top: -2%;
 }
